<resources>
    <string name="app_name">bohdan_forostianyi_czw_8_00_lab_3</string>
    <string name="kursy_walut">Kursy walut</string>
    <string name="currency_converter">Przelicznik</string>
    <string name="currency_rates">Kursy wałut</string>
    <string name="currency">Waluta</string>
    <string name="currency_empty">0.00</string>
    <string name="today_rates">Kurs z dzisiaj %1$s</string>
    <string name="last_day_rates">Kurs z wczoraj %1$s</string>
    <string name="month_course">Miesięczny kurs</string>
    <string name="week_course">Tygodniowy kurs</string>
    <string name="gold">Złoto</string>
    <string name="network_error">Wystąpił błąd sieciowy</string>
</resources>