<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.currency_details.CurrencyDetailsActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/currency_error"
        android:text="@string/network_error"
        android:visibility="gone"
        android:gravity="center"
        android:foregroundGravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="167dp">


        <LinearLayout
            android:id="@+id/currency_details_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/currency_details_currency_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Name" />

            <TextView
                android:id="@+id/today_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/today_rates" />

            <TextView
                android:id="@+id/last_day_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/last_day_rates" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/week_course" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/currency_weekly_rates"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/month_course" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/currency_monthly_rates"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>